--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!--! Add browsers laws-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--! Add favicon-->
+    <link rel="icon" href="/src/img/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" href="/src/img/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="/src/img/favicon.png" type="image/png">
+
+    <!--! Add style CSS-->
+    <link rel="stylesheet" href="/src/css/reset.css">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/variables.css">
+    <link rel="stylesheet" href="/src/css/media.css">
+    
+    <!--! Add title and description--> 
+    <title>Bakery-від серця до серця ❤️</title>
+    <meta name="description" content="Bakery-від серця до серця ❤️ - це сайт, де ви можете знайти найсмачнішу випічку міста Київ.">
+    <meta name="keywords" content="випічка, рецепти, тістечка, пироги, хліб, десерти">
+    <meta name="author" content="Sasha Zimin">
+    <meta name="copyright" content="Bakery-від серця до серця ❤️">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+
 </head>
 <body>
     GO
