add body, add nav menu

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <!--! Add browsers laws-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,9 +25,40 @@
     <meta name="copyright" content="Bakery-від серця до серця ❤️">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
-
 </head>
+
+    <!--! Body -->
 <body>
-    GO
+    <header>
+        <div class="logo">
+            <img src="/src/assets/images/logo.svg" alt="Bakery-від серця до серця ❤️" class="logo__img">
+        </div>
+        <nav class="menu">
+                <ul>
+                    <li class="menu_items">Головна</li>
+                    <li class="menu_items">Про нас</li>
+                    <li class="menu_items"></li>
+                    <li class="menu_items"></li>
+                    <li class="menu_items"></li>
+                </ul>
+        </nav>
+    </header>
+        <main>
+            <secion>
+
+            </secion>
+            <secion>
+
+            </secion>
+            <secion>
+
+            </secion>
+            <secion>
+
+            </secion>
+        </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
