--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -49,35 +49,34 @@
         <main>
 
             <!--! Static slide in background image-->
-            <secion class="background_img">
+            <section class="background_img">
                 <div class="background_img__text">
                     <p></p>
                 </div>
-            </secion>
-            <secion>
+            </section>
 
             <!--! Three icons-->
-            </secion class="icons">
+            <section class="icons">
                 <div class="icons__img">
                     <img src="/src/assets/images/icons.svg" alt="Bakery-від серця до серця ❤️" class="icons__img">
                 </div>
-            <secion>
+            </section>secion>
 
             <!--! Main text on page-->
-            </secion class="h1_title">
+            <section class="h1_title">
                 <h1 class="h1_title__text"></h1>
                 <p></p>
 
-            </secion>
+            </section>
             <!--! Google Map-->
-            <secion class="google_map">
+            <section class="google_map">
                 <div class="google_map__text">
                     <p></p>
                 </div>
                 <div class="google_map__iframe">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509123!2d144.9537353153164!3d-37.81627997975168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11b5c7%3A0x5045675218ceed30!2sVictoria%20Bakery%20-%20Bakery%20Shop%20in%20Melbourne%2C%20Australia!5e0!3m2!1sen!2sua!4v1633035600000" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
-            </secion>
+            </section>
         </main>
 
     <!--! Add footer -->
