--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -98,3 +98,27 @@
 </body>
 
 </html>
+
+<!--
+  Project:       Bakery
+  Author:        Sasha Zimin (https://github.com/zimindev)
+  Version:       1.0.0
+  Release Date:  2025-04-08
+  Technologies:  HTML5, CSS3, JS
+  License:       MIT
+  Description:   A responsive website for a Bakery.
+
+███████╗ █████╗ ███████╗██╗  ██╗ █████╗     ███████╗██╗███╗   ███╗██╗███╗   ██╗
+██╔════╝██╔══██╗██╔════╝██║  ██║██╔══██╗    ╚══███╔╝██║████╗ ████║██║████╗  ██║
+███████╗███████║███████╗███████║███████║      ███╔╝ ██║██╔████╔██║██║██╔██╗ ██║
+╚════██║██╔══██║╚════██║██╔══██║██╔══██║     ███╔╝  ██║██║╚██╔╝██║██║██║╚██╗██║
+███████║██║  ██║███████║██║  ██║██║  ██║    ███████╗██║██║ ╚═╝ ██║██║██║ ╚████║
+╚══════╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝    ╚══════╝╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝
+
+███████╗██╗███╗   ███╗██╗███╗   ██╗   ██████╗ ███████╗██╗   ██╗                
+╚══███╔╝██║████╗ ████║██║████╗  ██║   ██╔══██╗██╔════╝██║   ██║                
+  ███╔╝ ██║██╔████╔██║██║██╔██╗ ██║   ██║  ██║█████╗  ██║   ██║                
+ ███╔╝  ██║██║╚██╔╝██║██║██║╚██╗██║   ██║  ██║██╔══╝  ╚██╗ ██╔╝                
+███████╗██║██║ ╚═╝ ██║██║██║ ╚████║██╗██████╔╝███████╗ ╚████╔╝                 
+╚══════╝╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝╚═════╝ ╚══════╝  ╚═══╝  
+ -->
