--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 
 <!--
-  Project:       Bakery
-  Author:        Sasha Zimin (https://github.com/zimindev)
-  Version:       1.0.0
-  Release Date:  2025-04-08
-  Technologies:  HTML5, CSS3, JS
-  License:       MIT
-  Description:   A responsive website for a Bakery.
+🟥🟥🟥🟥🟥🟥🟥🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
 
-███████╗ █████╗ ███████╗██╗  ██╗ █████╗     ███████╗██╗███╗   ███╗██╗███╗   ██╗
-██╔════╝██╔══██╗██╔════╝██║  ██║██╔══██╗    ╚══███╔╝██║████╗ ████║██║████╗  ██║
-███████╗███████║███████╗███████║███████║      ███╔╝ ██║██╔████╔██║██║██╔██╗ ██║
-╚════██║██╔══██║╚════██║██╔══██║██╔══██║     ███╔╝  ██║██║╚██╔╝██║██║██║╚██╗██║
-███████║██║  ██║███████║██║  ██║██║  ██║    ███████╗██║██║ ╚═╝ ██║██║██║ ╚████║
-╚══════╝╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝    ╚══════╝╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝
+  📦 Project:       DeskTools | λάμδα  
+  💻 Author:        Sasha Zimin (https://zimin.dev)  
+  📧 Email:         info@zimin.dev
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+  🚀 Release:       https://github.com/zimindev/prj-frontend-bakery 
+  ⏲️ Release Date:  2022-04-01 18:25:00  
+  🔢 Version:       9.0.0
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+  🛠️ Technologies:  HTML5, CSS3, JS  
+  🧩 Description:   A responsive website for SEBN UA.
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+  📝 License:       MIT
+- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+  🆘 Found a bug?   [Request Assistance](https://help.zimin.dev/)
+  📝 Need website?  [Order Now](https://zimin.dev/contact)
 
-███████╗██╗███╗   ███╗██╗███╗   ██╗   ██████╗ ███████╗██╗   ██╗                
-╚══███╔╝██║████╗ ████║██║████╗  ██║   ██╔══██╗██╔════╝██║   ██║                
-  ███╔╝ ██║██╔████╔██║██║██╔██╗ ██║   ██║  ██║█████╗  ██║   ██║                
- ███╔╝  ██║██║╚██╔╝██║██║██║╚██╗██║   ██║  ██║██╔══╝  ╚██╗ ██╔╝                
-███████╗██║██║ ╚═╝ ██║██║██║ ╚████║██╗██████╔╝███████╗ ╚████╔╝                 
-╚══════╝╚═╝╚═╝     ╚═╝╚═╝╚═╝  ╚═══╝╚═╝╚═════╝ ╚══════╝  ╚═══╝  
- -->
+🟥🟥🟥🟥🟥🟥🟥🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
+-->
 
 <html lang="uk">
 
