add favicon icon

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,21 +3,20 @@
 <!--
 🟥🟥🟥🟥🟥🟥🟥🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
 
-  📦 Project:       DeskTools | λάμδα  
+  📦 Project:       Bakery  
   💻 Author:        Sasha Zimin (https://zimin.dev)  
   📧 Email:         info@zimin.dev
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   🚀 Release:       https://github.com/zimindev/prj-frontend-bakery 
   ⏲️ Release Date:  2022-04-01 18:25:00  
-  🔢 Version:       9.0.0
+  🔢 Version:       1.0.0
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   🛠️ Technologies:  HTML5, CSS3, JS  
-  🧩 Description:   A responsive website for SEBN UA.
+  🧩 Description:   A simple responsive website for Bakery.
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   📝 License:       MIT
 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   🆘 Found a bug?   [Request Assistance](https://help.zimin.dev/)
-  📝 Need website?  [Order Now](https://zimin.dev/contact)
 
 🟥🟥🟥🟥🟥🟥🟥🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩🟩
 -->
@@ -31,9 +30,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!--! Favicon -->
-    <link rel="icon" href="/src/img/favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="/src/img/favicon.png">
-    <link rel="shortcut icon" href="/src/img/favicon.png">
+    <link rel="icon" href="/src/assets/favicon/favicon_32x32.png" type="image/png">
+    <link rel="shortcut icon" href="/src/assets/favicon/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="96x96" href="/src/assets/favicon/favicon_96x96.png">
 
     <!--! CSS -->
     <link rel="stylesheet" href="/src/css/reset.css">
