--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -114,7 +114,7 @@
             </ul>
         </nav>
         <p class="copyright">
-            &copy; 2025 Bakery — від серця до серця ❤️. Всі права захищені. Created by <a href="https://zimin.dev">Sasha Zimin</a> .
+            &copy; 2025 Bakery — від серця до серця ❤️. Всі права захищені. Created by <a href="https://zimin.dev" target="_blank">Sasha Zimin</a> .
         </p>
     </footer>
 </body>
