add style.css +first class

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -56,13 +56,13 @@
                 <img src="/src/assets/images/logo.svg" alt="Логотип Bakery" class="logo__img">
             </a>
         </div>
-        <nav class="menu" aria-label="Головне меню">
+        <nav class="main_menu" aria-label="Головне меню">
             <ul>
-                <li><a href="#home" class="menu_items">Головна</a></li>
-                <li><a href="#about" class="menu_items">Про нас</a></li>
-                <li><a href="#bakery" class="menu_items">Випічка</a></li>
-                <li><a href="#news" class="menu_items">Новини</a></li>
-                <li><a href="#contacts" class="menu_items">Контакти</a></li>
+                <li><a href="#home" class="main_menu__items">Головна</a></li>
+                <li><a href="#about" class="main_menu__items">Про нас</a></li>
+                <li><a href="#bakery" class="main_menu__items">Випічка</a></li>
+                <li><a href="#news" class="main_menu__items">Новини</a></li>
+                <li><a href="#contacts" class="main_menu__items">Контакти</a></li>
             </ul>
         </nav>
     </header>
