--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,6 +40,9 @@
     <link rel="stylesheet" href="/src/css/style.css">
     <link rel="stylesheet" href="/src/css/media.css">
 
+    <!--! Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <!--! SEO tags -->
     <title>Bakery — від серця до серця ❤️</title>
     <meta name="description" content="Bakery — від серця до серця ❤️ — це сайт, де ви знайдете найсмачнішу випічку Києва.">
@@ -52,9 +55,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
-                <img src="/src/assets/images/logo.svg" alt="Логотип Bakery" class="logo__img">
-            </a>
+                <img  class="logo__img" src="/src/assets/img/logo.svg" alt="Bakery">
         </div>
         <nav class="main_menu" aria-label="Головне меню">
             <ul>
