add css for logo

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -37,7 +37,7 @@
     <!--! CSS -->
     <link rel="stylesheet" href="/src/css/reset.css">
     <link rel="stylesheet" href="/src/css/variables.css">
-    <link rel="stylesheet" href="/src/css/style.css">
+    <link rel="stylesheet" href="/src/css/styles.css">
     <link rel="stylesheet" href="/src/css/media.css">
 
     <!--! SEO tags -->
@@ -52,8 +52,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/">
-                <img src="/src/assets/images/logo.svg" alt="Логотип Bakery" class="logo__img">
+            <a href="#">
+                <img class="logo__img" src="/src/assets/img/logo.svg" alt="Логотип Bakery">
             </a>
         </div>
         <nav class="main_menu" aria-label="Головне меню">
