--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -82,7 +82,9 @@
         <!--! Icon section -->
         <section class="icons">
             <div class="icons__img">
-                <img src="/src/assets/images/icons.svg" alt="Іконки: хліб, тістечка, торт" class="icons__img">
+                <img src="/src/assets/icons/bakery.svg" alt="Іконки: хліб, тістечка, торт">
+                <img src="/src/assets/icons/cakes.svg" alt="Іконки: хліб, тістечка, торт">
+                <img src="/src/assets/icons/sweet.svg" alt="Іконки: хліб, тістечка, торт">
             </div>
         </section>
 
