--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -59,6 +59,10 @@
                 <img class="logo__img" src="/src/assets/img/logo.svg" alt="Логотип Bakery">
             </a>
         </div>
+    </header>
+
+    <main>
+        <!--! Navigation menu -->
         <nav class="main_menu" aria-label="Головне меню">
             <ul>
                 <li><a href="#home" class="main_menu__items">Головна</a></li>
@@ -68,9 +72,7 @@
                 <li><a href="#contacts" class="main_menu__items">Контакти</a></li>
             </ul>
         </nav>
-    </header>
 
-    <main>
         <!--! Section with background image -->
         <section id="home" class="background_img">
             <div class="background_img__text">
