--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -84,15 +84,15 @@
         <!--! Icon section -->
         <section class="icons">
             <div class="icons__img">
-                <img src="/src/assets/icons/bakery.svg" alt="Іконки: хліб, тістечка, торт">
-                <img src="/src/assets/icons/cakes.svg" alt="Іконки: хліб, тістечка, торт">
-                <img src="/src/assets/icons/sweet.svg" alt="Іконки: хліб, тістечка, торт">
+                <img class="icons__img" src="/src/assets/icons/bakery.svg" alt="Іконки: хліб, тістечка, торт">
+                <img class="icons__img" src="/src/assets/icons/cakes.svg" alt="Іконки: хліб, тістечка, торт">
+                <img class="icons__img" src="/src/assets/icons/sweet.svg" alt="Іконки: хліб, тістечка, торт">
             </div>
         </section>
 
         <!--! Main site title -->
         <section class="h1_title">
-            <h2 class="h1_title__text">Найсмачніша випічка у місті Київ</h2>
+            <h2 class="h1_title__text">Найсмачніша <span>випічка</span> у місті Київ</h2>
             <p>Ми готуємо з любов’ю, використовуючи найкращі інгредієнти. Завітайте до нас і переконайтесь самі!</p>
         </section>
 
