--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -92,8 +92,12 @@
 
         <!--! Main site title -->
         <section class="h1_title">
-            <h2 class="h1_title__text">Найсмачніша <span>випічка</span> у місті Київ</h2>
-            <p>Ми готуємо з любов’ю, використовуючи найкращі інгредієнти. Завітайте до нас і переконайтесь самі!</p>
+            <h1 class="h1_title__text">Найсмачніша <span>випічка</span> у місті Київ</h1>
+            <p>Ми готуємо з любов’ю, використовуючи найкращі інгредієнти. Завітайте до нас і переконайтесь самі!
+                У нас ви знайдете не лише смачні страви, а й теплу атмосферу, що зігріває серце.
+                Кожен наш рецепт — це поєднання традицій, турботи та натхнення.
+                Ми дбаємо про кожного гостя, тому кожен ваш візит — особливий для нас.
+                Скуштуйте, відчуйте різницю і станьте частиною нашої великої родини смаку!</p>
         </section>
 
         <!--! Google-map -->
