google map text

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -92,7 +92,7 @@
 
         <!--! Main site title -->
         <section class="h1_title">
-            <h1 class="h1_title__text">Найсмачніша <span>випічка</span> у місті Київ</h1>
+            <h1 class="h1_title__text">Найсмачніша <span>випічка</span> <br>у місті Київ</h1>
             <p>Ми готуємо з любов’ю, використовуючи найкращі інгредієнти. Завітайте до нас і переконайтесь самі!
                 У нас ви знайдете не лише смачні страви, а й теплу атмосферу, що зігріває серце.
                 Кожен наш рецепт — це поєднання традицій, турботи та натхнення.
@@ -103,7 +103,7 @@
         <!--! Google-map -->
         <section id="contacts" class="google_map">
             <div class="google_map__text">
-                <h3>Знайдіть нас на мапі</h3>
+                <p>Знайдіть нас на мапі</p>
                 <p>Ми розташовані у самому серці Києва</p>
             </div>
             <div class="google_map__iframe">
