--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,17 +25,17 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="shortcut icon" href="/favicon/favicon.png" type="image/x-icon">
-	<link rel="stylesheet" href="/css/reset.css">
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/media.css">
+	<link rel="shortcut icon" href="/src/assets/favicon/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="/src/css/reset.css">
+	<link rel="stylesheet" href="/src/css/styles.css">
+	<link rel="stylesheet" href="/src/css/media.css">
 	<title>Bakery | Київська випічка</title>
 	<meta name="description" content="Чудова Київська випічка за власним рецептом">
 </head>
 <body>
 	<header id="start">
 		<div class="logo">
-			<img src="/img/01-Logo.svg" alt="Bakery">
+			<img src="/src/assets/img/logo.svg alt="Bakery">
 		</div>
 		<nav>
 			<ul>
@@ -57,13 +57,13 @@
 		</section>
 		<section class="icons" id="shop">
 			<div class="icons_item">
-				<img src="/icons/01-Иконка.svg" alt="Always Fresh">
+				<img src="/src/assets/icons/sweet.svg" alt="Always Fresh">
 			</div>
 			<div class="icons_item">
-				<img src="/icons/02-Иконка.svg" alt="Cakes">
+				<img src="/src/assets/icons/cakes.svg" alt="Cakes">
 			</div>
 			<div class="icons_item">
-				<img src="/icons/03-Иконка.svg" alt="Bakery">
+				<img src="/src/assets/icons/bakery.svg" alt="Bakery">
 			</div>
 		</section>
 		<section class="main_text">
