--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -93,6 +93,7 @@
 				<li><a href="#contact">Контакти</a></li>
 			</ul>
 		</nav>
+		<p class="copy">👨‍💻 Designed & developed by <a class="copy-link" href="https://zimin.dev/" target="_blank" rel="noopener noreferrer">Sasha Zimin</a>.</p>
 	</footer>
 </body>
 </html>
