--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -34,7 +34,7 @@ qq- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 <body>
 	<header id="start">
 		<div class="logo">
-			<img src="/src/assets/img/logo.svg alt="Bakery">
+			<img src="/src/assets/img/logo.svg" alt="Bakery">
 		</div>
 		<nav>
 			<ul>
